--- a/zoro-app/package.json
+++ b/zoro-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
