--- a/zoro-app/package.json
+++ b/zoro-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "generate-favicon": "node scripts/generate-favicon.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
@@ -23,6 +24,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "sharp": "^0.33.0",
+    "to-ico": "^1.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
