--- a/zoro-app/package.json
+++ b/zoro-app/package.json
@@ -10,28 +10,37 @@
     "generate-favicon": "node scripts/generate-favicon.js",
     "import-advisors": "node scripts/import-sebi-advisors.js",
     "import-advisors:resume": "node scripts/import-sebi-advisors.js --resume",
-    "import-advisors:pages": "node scripts/import-sebi-advisors.js --max-pages="
+    "import-advisors:pages": "node scripts/import-sebi-advisors.js --max-pages=",
+    "test": "jest"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
     "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.7",
+    "resend": "^4.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^16.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "puppeteer": "^24.31.0",
     "sharp": "^0.33.0",
     "tailwindcss": "^4",
     "to-ico": "^1.1.1",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
