--- a/zoro-app/.gitignore
+++ b/zoro-app/.gitignore
@@ -30,6 +30,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# workspace (local / other repos)
+memory/
+inbox-agent/
+
 # env files (can opt-in for committing if needed)
 .env*
 
