--- a/zoro-app/package.json
+++ b/zoro-app/package.json
@@ -8,15 +8,18 @@
     "start": "next start",
     "lint": "eslint",
     "generate-favicon": "node scripts/generate-favicon.js",
-    "test": "jest"
+    "test": "jest",
+    "listen:forms": "ts-node scripts/form-listener.ts",
+    "listen:forms:dev": "nodemon --watch scripts/form-listener.ts --exec \"ts-node scripts/form-listener.ts\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.7",
-    "resend": "^4.1.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "resend": "^4.1.0",
+    "undici": "^7.21.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -31,6 +34,7 @@
     "eslint-config-next": "16.0.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "nodemon": "^3.1.11",
     "puppeteer": "^24.31.0",
     "sharp": "^0.33.0",
     "tailwindcss": "^4",
